--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,19 @@
       <version>${junit-jupiter.version}</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+    <dependency>
+      <groupId>nl.waypoint.brombauer</groupId>
+      <artifactId>Backend</artifactId>
+      <scope>compile</scope>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.14.1</version>
+    </dependency>
 
+  </dependencies>
   <build>
     <plugins>
       <plugin>
